# subtitle-analyzer-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude/rules/: git-workflow.md  uv-python.md
src/: __init__.py  analyzer.py  server.py  subtitle_extractor.py
